<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SignupActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingTop="50dp"
        android:paddingBottom="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/logo_wdg_white"
            android:contentDescription="@+string/WDG"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="50dp"
            android:orientation="vertical"
            android:gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/nickname"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="32sp"
                    android:inputType="text"
                    android:autofillHints="name"
                    android:hint="@string/nickname_placeholder"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nickname_suffix_text"
                    android:textSize="24sp"/>
            
            </LinearLayout>

            <LinearLayout
                android:id="@+id/nickname_noti"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">
                
                <ImageView
                    android:id="@+id/nickname_noti_icon"
                    android:layout_width="30dp"
                    android:layout_height="20dp"
                    android:src="@drawable/icon_info"
                    android:contentDescription="@string/alt_info"/>
                
                <TextView
                    android:id="@+id/nickname_noti_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nickname_noti_info"
                    android:textColor="@color/gray"/>
                
            </LinearLayout>
                
        </LinearLayout>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/submit_button"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:paddingHorizontal="30dp"
        android:background="@color/blue"
        android:text="@string/nickname_button_check"
        android:textSize="24sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>