<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".profile.ProfileActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/toolbar_background"
        android:paddingHorizontal="15dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/toolbar_back"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@null"
            android:layout_gravity="start"
            android:src="@drawable/ic_arrow_back"
            android:contentDescription="@string/toolbar_back"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textColor="@color/toolbar_content"/>

    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profile_stat"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/profile_posts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/profile_likes">
            <TextView
                android:id="@+id/profile_posts_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/black"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_post"
                android:textSize="12sp"
                android:textColor="@color/black"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/profile_likes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/profile_posts"
            app:layout_constraintEnd_toEndOf="parent">
            <TextView
                android:id="@+id/profile_likes_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/black"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_like"
                android:textSize="12sp"
                android:textColor="@color/black"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profile_list_header"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/bg_list_header"
        app:layout_constraintTop_toBottomOf="@id/profile_stat">
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_signpost"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/profile_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/profile_list_header"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>